--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jing Ren"
+  name             : "Jing Ren 任静"
   avatar           : "profile.png"
-  bio              : " "
+  bio              : "Ph.D. Candidate, Institute of Innovation, Science and Sustainability, Federation University Australia, Ballarat, VIC 3353, Australia"
   location         : "Australia"
   employer         :
   pubmed           : 
